data/derived/sp14/progs/unify/prog1904.ml.out
Characters 81-108:
  ( pos + 1, mulByDigit ( 10.0 ** float_of_int pos) l2 ) in 
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
